--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 </head>
 
-<body data-sidebar="dark" >
+<body data-sidebar="dark">
 
     <!-- Loader -->
     <div id="preloader">
@@ -412,7 +412,7 @@
                                             <div class="text-lg-left mt-4 mt-lg-0">
                                                 <div class="row">
                                                     <div class="col-sm-6 col-md-3 col-lg-3 mb-5 mb-md-0">
-                                                        <div>
+                                                        <div class="custom-drop-shadow">
                                                             <div class="avatar-xs mb-3">
                                                                 <span class="avatar-title rounded-circle bg-info font-size-16">
                                                                         <i class="mdi mdi-receipt text-white"></i>
@@ -423,7 +423,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-sm-6 col-md-3 col-lg-3 mb-5 mb-md-0">
-                                                        <div>
+                                                        <div class="custom-drop-shadow">
                                                             <div class="avatar-xs mb-3">
                                                                 <span class="avatar-title rounded-circle font-size-16">
                                                                         <i class="mdi mdi mdi-briefcase-check text-white"></i>
@@ -436,7 +436,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-sm-12 col-md-3 col-lg-3 mb-5 mb-md-0">
-                                                        <div>
+                                                        <div class="custom-drop-shadow">
                                                             <div class="avatar-xs mb-3">
                                                                 <span class="avatar-title rounded-circle bg-pink font-size-16">
                                                                         <i class="mdi mdi-account-alert text-white"></i>
@@ -449,7 +449,7 @@
                                                     </div>
 
                                                     <div class="col-sm-12 col-md-3 col-lg-3 mb-5 mb-md-0">
-                                                        <div>
+                                                        <div class="custom-drop-shadow">
                                                             <div class="avatar-xs mb-3">
                                                                 <span class="avatar-title rounded-circle bg-pink font-size-16">
                                                                         <i class="mdi mdi-account-alert text-white"></i>
@@ -462,7 +462,7 @@
                                                     </div>
                                                     
                                                     <div class="col-sm-12 col-md-3 col-lg-3 mb-5 mb-md-0 d-none">
-                                                        <div>
+                                                        <div class="custom-drop-shadow">
                                                             <div class="avatar-xs mb-3">
                                                                 <span class="avatar-title rounded-circle bg-whatsApp font-size-16">
                                                                         <i class="mdi mdi-sticker-check text-white"></i>
@@ -475,7 +475,7 @@
                                                     </div>
 
                                                     <div class="col-sm-12 col-md-3 col-lg-2 mb-5 mb-md-0 d-none">
-                                                        <div>
+                                                        <div class="custom-drop-shadow">
                                                             <div class="avatar-xs mb-3">
                                                                 <span class="avatar-title rounded-circle bg-warning font-size-16">
                                                                         <i class="mdi mdi-sticker-alert text-white"></i>
@@ -487,7 +487,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-sm-12 col-md-3 col-lg-2 mb-5 mb-md-0 d-none">
-                                                        <div>
+                                                        <div class="custom-drop-shadow">
                                                             <div class="avatar-xs mb-3">
                                                                 <span class="avatar-title rounded-circle bg-danger font-size-16">
                                                                         <i class="mdi mdi-sticker-remove text-white"></i>
@@ -552,7 +552,7 @@
                                             <div class="text-lg-left mt-lg-0">
                                                 <div class="row">
                                                     <div class="col-sm-6 col-md-3 col-lg-2 mb-5 mb-md-0 quick-stat">
-                                                        <div>
+                                                        <div class="custom-drop-shadow">
                                                             <img src="assets/images/index-icons/check.svg" alt="">
                                                             <div class="avatar-xs mb-3 d-none">
                                                                 <span class="avatar-title rounded-circle bg-info font-size-16">
@@ -566,7 +566,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-sm-6 col-md-3 col-lg-2 mb-5 mb-md-0 quick-stat">
-                                                        <div>
+                                                        <div class="custom-drop-shadow">
                                                             <img src="assets/images/index-icons/alarm.png" alt="">
                                                             <div class="avatar-xs mb-3 d-none">
                                                                 <span class="avatar-title rounded-circle font-size-16">
@@ -580,7 +580,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="col-sm-12 col-md-3 col-lg-2 mb-5 mb-md-0 quick-stat">
-                                                        <div>
+                                                        <div class="custom-drop-shadow">
                                                             <img src="assets/images/index-icons/protection.png" alt="">
                                                             <div class="avatar-xs mb-3 d-none">
                                                                 <span class="avatar-title rounded-circle bg-pink font-size-16">
@@ -596,7 +596,7 @@
                                                     </div>
 
                                                     <div class="col-sm-12 col-md-3 col-lg-2 mb-5 mb-md-0 quick-stat">
-                                                        <div>
+                                                        <div class="custom-drop-shadow">
                                                             <img src="assets/images/index-icons/danger.png" alt="">
                                                             <div class="avatar-xs mb-3 d-none">
                                                                 <span class="avatar-title rounded-circle bg-pink font-size-16">
@@ -612,7 +612,7 @@
                                                     </div>
 
                                                     <div class="col-sm-12 col-md-3 col-lg-2 mb-5 mb-md-0 quick-stat">
-                                                        <div>
+                                                        <div class="custom-drop-shadow">
                                                             <img src="assets/images/index-icons/no-internet (1).png" alt="">
                                                             <div class="avatar-xs mb-3 d-none">
                                                                 <span class="avatar-title rounded-circle bg-pink font-size-16">
@@ -630,7 +630,7 @@
                                                     
 
                                                     <div class="col-sm-12 col-md-3 col-lg-2 mb-5 mb-md-0 d-non quick-stat">
-                                                        <div>
+                                                        <div class="custom-drop-shadow">
                                                             <div class="avatar-xs mb-3">
                                                                 <img src="assets/images/index-icons/offline.png" alt="">
                                                                 <span class="avatar-title rounded-circle bg-warning font-size-16 d-none">
@@ -668,7 +668,7 @@
                                             <h6 class="text-white text-uppercase">Live Stats</h6>
                                         </div>
                                         <div class="col-sm-12 mb-3">
-                                            <div class="live-data-card">
+                                            <div class="live-data-card custom-drop-shadow">
                                                 <div class="">
                                                     <div class="me-3">
                                                         <img src="assets/images/index-icons/fast.svg" alt="">
@@ -686,7 +686,7 @@
                                         </div>
 
                                         <div class="col-sm-12 mb-3">
-                                            <div class="live-data-card">
+                                            <div class="live-data-card custom-drop-shadow">
                                                 <div class="">
                                                     <div class="me-3">
                                                         <img src="assets/images/index-icons/racing.png" alt="">
@@ -703,7 +703,7 @@
                                             </div>
                                         </div>
                                         <div class="col-sm-12 mb-3">
-                                            <div class="live-data-card">
+                                            <div class="live-data-card custom-drop-shadow">
                                                 <div class="">
                                                     <div class="me-3">
                                                         <img src="assets/images/index-icons/bill.png" alt="">
@@ -720,7 +720,7 @@
                                             </div>
                                         </div>
                                         <div class="col-sm-12 mb-3">
-                                            <div class="live-data-card">
+                                            <div class="live-data-card custom-drop-shadow">
                                                 <div class="">
                                                     <div class="me-3">
                                                         <img src="assets/images/index-icons/no-wifi.svg" alt="">
@@ -737,7 +737,7 @@
                                             </div>
                                         </div>
                                         <div class="col-sm-12 mb-3">
-                                            <div class="live-data-card">
+                                            <div class="live-data-card custom-drop-shadow">
                                                 <div class="">
                                                     <div class="me-3">
                                                         <img src="assets/images/index-icons/road.png" alt="">
@@ -755,7 +755,7 @@
                                         </div>
 
                                         <div class="col-sm-12 mb-3">
-                                            <div class="live-data-card">
+                                            <div class="live-data-card custom-drop-shadow">
                                                 <div class="">
                                                     <div class="me-3">
                                                         <img src="assets/images/index-icons/car-accident.png" alt="">
