--- a/schools.html
+++ b/schools.html
@@ -441,7 +441,7 @@
                                                     </td>
                                                     <td>
                                                         <div class="d-flex justify-content-end">
-                                                            <a href="#" class="btn btn-primary btn-sm waves-effect waves-light text-nowrap me-3">View Details</a>
+                                                            <a href="#" class="btn btn-primary btn-sm waves-effect waves-light text-nowrap me-3 d-none">View Details</a>
                                                             <div class="dropdown d-none">
                                                                 <a class="text-muted font-size-16" role="button" data-bs-toggle="dropdown" aria-haspopup="true">
                                                                     <i class="bx bx-dots-vertical-rounded"></i>
@@ -472,7 +472,7 @@
                                                     </td>
                                                      <td>
                                                         <div class="d-flex justify-content-end">
-                                                            <a href="#" class="btn btn-primary btn-sm waves-effect waves-light text-nowrap me-3">View Details</a>
+                                                            <a href="#" class="btn btn-primary btn-sm waves-effect waves-light text-nowrap me-3 d-none">View Details</a>
                                                             <div class="dropdown d-none">
                                                                 <a class="text-muted font-size-16" role="button" data-bs-toggle="dropdown" aria-haspopup="true">
                                                                     <i class="bx bx-dots-vertical-rounded"></i>
@@ -503,7 +503,7 @@
                                                     </td>
                                                      <td>
                                                         <div class="d-flex justify-content-end">
-                                                            <a href="#" class="btn btn-primary btn-sm waves-effect waves-light text-nowrap me-3">View Details</a>
+                                                            <a href="#" class="btn btn-primary btn-sm waves-effect waves-light text-nowrap me-3 d-none">View Details</a>
                                                             <div class="dropdown d-none">
                                                                 <a class="text-muted font-size-16" role="button" data-bs-toggle="dropdown" aria-haspopup="true">
                                                                     <i class="bx bx-dots-vertical-rounded"></i>
@@ -534,7 +534,7 @@
                                                     </td>
                                                      <td>
                                                         <div class="d-flex justify-content-end">
-                                                            <a href="#" class="btn btn-primary btn-sm waves-effect waves-light text-nowrap me-3">View Details</a>
+                                                            <a href="#" class="btn btn-primary btn-sm waves-effect waves-light text-nowrap me-3 d-none">View Details</a>
                                                             <div class="dropdown d-none">
                                                                 <a class="text-muted font-size-16" role="button" data-bs-toggle="dropdown" aria-haspopup="true">
                                                                     <i class="bx bx-dots-vertical-rounded"></i>
